--- a/ocasioes-especiais.html
+++ b/ocasioes-especiais.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
     <link rel="stylesheet" href="style/paginas/decorações-e-eventos/decoracoes-e-eventos.css">
 
@@ -39,7 +39,7 @@
     <section class="imagem-titulo">
         <div class="titulo__imagem">
             <span class="imagem-titulo_principal">Ocasiões Especiais</span>
-            <img class="imagem__principal" src="/images/ocasioes.jpeg" alt="">
+            <img class="imagem__principal" src="images/ocasioes.jpeg" alt="">
         </div>
     </section>
 
@@ -51,17 +51,17 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="/images/flor1.jpg" alt="Flor 1">
+              <img src="images/flor1.jpg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor2.jpg" alt="Flor 2">
+              <img src="images/flor2.jpg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor3.jpg" alt="Flor 3">
+              <img src="images/flor3.jpg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
@@ -77,32 +77,32 @@
 
       <div class="cards-container">
           <div class="card">
-            <img src="/images/flor1.jpg" alt="Flor 1">
+            <img src="images/flor1.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor2.jpg" alt="Flor 2">
+            <img src="images/flor2.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor3.jpg" alt="Flor 3">
+            <img src="images/flor3.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor1.jpg" alt="Flor 1">
+            <img src="images/flor1.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor2.jpg" alt="Flor 2">
+            <img src="images/flor2.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor3.jpg" alt="Flor 3">
+            <img src="images/flor3.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -119,32 +119,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
@@ -161,32 +161,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
