alterando alguns botões para tags a, adaptando o CSS

--- a/arranjos-personalizados.html
+++ b/arranjos-personalizados.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
     <link rel="stylesheet" href="style/paginas/decorações-e-eventos/decoracoes-e-eventos.css">
 
@@ -21,18 +20,18 @@
 
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="">Home</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Portifólio</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Contato</a></li>
-          </ul>
+            <li><a class="nav-home" href="index.html">Home</a></li>
+            <li><a class="nav-home" href="#">Sobre</a></li>
+            <li><a class="nav-home" href="portifolio.html">Portifólio</a></li>
+            <li><a class="nav-home" href="#">Serviços</a></li>
+            <li><a class="nav-home" href="#">Contato</a></li>
+            <li><a class="nav-home__login" href="login.html">Login</a></li>
         </nav>
 
     <section class="imagem-titulo">
         <div class="titulo__imagem">
             <span class="imagem-titulo_principal">Arranjos Personalizados</span>
-            <img class="imagem__principal" src="/images/arranjos persona.jpeg" alt="">
+            <img class="imagem__principal" src="images/arranjos persona.jpeg" alt="">
         </div>
     </section>
 
