--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <nav class="nav gridItem">
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="">Sobre</a></li>
+            <li><a class="nav-home" href="#">Sobre</a></li>
             <li><a class="nav-home" href="portifolio.html">Portifólio</a></li>
-            <li><a class="nav-home" href="">Serviços</a></li>
-            <li><a class="nav-home" href="">Contato</a></li>
+            <li><a class="nav-home" href="#">Serviços</a></li>
+            <li><a class="nav-home" href="#">Contato</a></li>
             <li><a class="nav-home__login" href="login.html">Login</a></li>
           </ul>
         </nav>
@@ -90,7 +90,7 @@
     <section class="inicial-chamada__portifolio">
       <h2 class="chamada__portifolio-title">Transformando sonhos em arranjos florais</h2>
       <span class="chamada__portifolio-subtitle">SURPREENDA</span>
-      <button class="button-portifolio">PORTIFÓLIO</button>
+      <a class="button-portifolio" href="portifolio.html">PORTIFÓLIO</a>
     </section>
 
     <section class="inicial-avaliacao__clientes">
