--- a/ocasioes-especiais.html
+++ b/ocasioes-especiais.html
@@ -19,20 +19,11 @@
 
         <nav class="nav gridItem">
           <ul>
-<<<<<<< Updated upstream
-            <li><a class="nav-home" href="">Home</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Portifólio</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Contato</a></li>
-=======
             <li><a class="nav-home" href="index.html">Home</a></li>
-            <li><a class="nav-home" href="#">Sobre</a></li>
-            <li><a class="nav-home" href="portifolio.html">Portifólio</a></li>
-            <li><a class="nav-home" href="#">Serviços</a></li>
-            <li><a class="nav-home" href="#">Contato</a></li>
-            <li><a class="nav-home__login" href="login.html">Login</a></li>
->>>>>>> Stashed changes
+            <li><a href="#">Sobre</a></li>
+            <li><a href="portifolio.html">Portifólio</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Contato</a></li>
           </ul>
         </nav>
 
