--- a/ocasioes-especiais.html
+++ b/ocasioes-especiais.html
@@ -24,6 +24,8 @@
             <li><a href="portifolio.html">Portifólio</a></li>
             <li><a href="#">Serviços</a></li>
             <li><a href="#">Contato</a></li>
+            <li><a href="login.html">Login</a></li>
+
           </ul>
         </nav>
 
