--- a/decorações-e-eventos.html
+++ b/decorações-e-eventos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
     <link rel="stylesheet" href="style/paginas/decorações-e-eventos/decoracoes-e-eventos.css">
 
@@ -14,7 +14,7 @@
     crossorigin="anonymous"
   ></script>
 
-    <title>Document</title>
+    <title>Decorações</title>
 </head>
 <body>
 
@@ -25,6 +25,7 @@
             <li><a href="portifolio.html">Portifólio</a></li>
             <li><a href="#">Serviços</a></li>
             <li><a href="#">Contato</a></li>
+            <li><a href="login.html">Login</a></li>
           </ul>
         </nav>
 
