--- a/ocasioes-especiais.html
+++ b/ocasioes-especiais.html
@@ -44,21 +44,21 @@
         </div>
 
         <div class="cards-container">
-            <div class="card">
-              <img src="images/flor1.jpg" alt="Flor 1">
-              <h2 class="card-title">Flor 1</h2>
-              <span class="card-price">R$ 10,00 (por haste)</span>
-            </div>
-            <div class="card">
-              <img src="images/flor2.jpg" alt="Flor 2">
-              <h2 class="card-title">Flor 2</h2>
-              <span class="card-price">R$ 15,00 (por haste)</span>
-            </div>
-            <div class="card">
-              <img src="images/flor3.jpg" alt="Flor 3">
-              <h2 class="card-title">Flor 3</h2>
-              <span class="card-price">R$ 12,00 (por haste)</span>
-            </div>
+          <div class="card">
+            <img src="images/florestropicais (22).jpeg" alt="Flor 1">
+            <h2 class="card-title">Flor 1</h2>
+            <span class="card-price">R$ 10,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="images/florestropicais (21).jpeg" alt="Flor 2">
+            <h2 class="card-title">Flor 2</h2>
+            <span class="card-price">R$ 15,00 (por haste)</span>
+          </div>
+          <div class="card">
+            <img src="images/florestropicais (14).jpeg" alt="Flor 3">
+            <h2 class="card-title">Flor 3</h2>
+            <span class="card-price">R$ 12,00 (por haste)</span>
+          </div>
             <!-- Adicione mais cards aqui conforme necessário -->
           </div>
 
