--- a/ocasioes-especiais.html
+++ b/ocasioes-especiais.html
@@ -71,32 +71,32 @@
 
       <div class="cards-container">
           <div class="card">
-            <img src="images/florestropicais (19).jpeg" alt="Flor 1">
+            <img src="images/namorados-2.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (20).jpeg" alt="Flor 2">
+            <img src="images/namorados-11.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (21).jpeg" alt="Flor 3">
+            <img src="images/namorados-3.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (22).jpeg" alt="Flor 1">
+            <img src="images/namorados-5.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (18).jpeg" alt="Flor 2">
+            <img src="images/namorados-6.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="images/florestropicais (17).jpeg" alt="Flor 3">
+            <img src="images/namorados-8.jpeg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -155,32 +155,17 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="images/florestropicais (14).jpeg" alt="Flor 1">
+          <img src="images/maes-3.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (14).jpeg" alt="Flor 2">
+          <img src="images/maes-2.jpeg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="images/florestropicais (14).jpeg" alt="Flor 3">
-          <h2 class="card-title">Flor 3</h2>
-          <span class="card-price">R$ 12,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="images/florestropicais (14).jpeg" alt="Flor 1">
-          <h2 class="card-title">Flor 1</h2>
-          <span class="card-price">R$ 10,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="images/florestropicais (14).jpeg" alt="Flor 2">
-          <h2 class="card-title">Flor 2</h2>
-          <span class="card-price">R$ 15,00 (por haste)</span>
-        </div>
-        <div class="card">
-          <img src="images/florestropicais (14).jpeg" alt="Flor 3">
+          <img src="images/maes-1.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
