--- a/portifolio.html
+++ b/portifolio.html
@@ -42,13 +42,13 @@
         <div class="portifolio-container">
   
           <div class="card__portifolio">
-            <img src="images/florestropicais (19).jpeg" alt="Flor 3">
+            <img src="images/deco.jpeg" alt="Flor 3">
             <h2 class="card__portifolio-title">Decorações e Eventos</h2>
             <span class="card__portifolio-price">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm</span>
           </div>
           
         <div class="card__portifolio">
-          <img clas src="iimages/florestropicais (20).jpeg" alt="Flor 3">
+          <img clas src="images/arranjospersonalizados.jpg" alt="Flor 3">
           <h2 class="card__portifolio-title">Arranjos Personalizados</h2>
           <span class="card__portifolio-price">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumm</span>
         </div>
