--- a/cadastro.html
+++ b/cadastro.html
@@ -39,7 +39,7 @@
             <label for="">Senha:<input type="password" name="" id=""></label>
             <label for="">Confirmar Senha:<input type="password" name="" id="" /></label>
             <a href="">Recuperar senha</a>
-            <input class="btn-entrar" type="submit" value="Entrar" />
+            <input class="btn-entrar" type="submit" value="Cadastrar" />
           </div>
         </div>
       </main>
