--- a/portifolio.html
+++ b/portifolio.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="style/estilos-comuns/reset.css">
         <link rel="stylesheet" href="style/estilos-comuns/style.css">
         <link rel="stylesheet" href="style/paginas/portifolio/portifolio.css">
-        <title>Home</title>
+        <title>Portifólio</title>
     </head>
 <body>
 
