--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style/estilos-comuns/reset.css">
     <link rel="stylesheet" href="style/estilos-comuns/style.css">
     <link rel="stylesheet" href="./chatbot/chatbot - petala/chatbot_style.css">
+    <link rel="stylesheet" href="/darkmode/dark.css">
     <title>Home</title>
 </head>
 <body>
@@ -27,6 +28,7 @@
             <li><a class="nav-home" href="#">Serviços</a></li>
             <li><a class="nav-home" href="#">Contato</a></li>
             <li><a class="nav-home__login" href="login.html">Login</a></li>
+            <li><button class="btn">Dark</button></li>
           </ul>
         </nav>
       </nav>
@@ -169,7 +171,8 @@
         <ul><li><a href="">CNPJ ou Razão Social</a></li></ul>
       </footer>
     </section>
-
+    
+    <script src="./darkmode/app.js"></script>
     <script src="./chatbot/chatbot - petala/script.js"></script>
 </body>
 </html>
