--- a/ocasioes-especiais.html
+++ b/ocasioes-especiais.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
     <link rel="stylesheet" href="style/paginas/decorações-e-eventos/decoracoes-e-eventos.css">
+    <link rel="stylesheet" href="./darkmode/main.css">
 
     <script
     src="https://kit.fontawesome.com/0f251f1c56.js"
@@ -26,6 +27,7 @@
             <li><a href="#">Serviços</a></li>
             <li><a href="#">Contato</a></li>
             <li><a href="login.html">Login</a></li>
+            <li><button class="btn">Dark</button></li>
 
           </ul>
         </nav>
@@ -189,5 +191,8 @@
 
         <ul><li><a href="">CNPJ ou Razão Social</a></li></ul>
       </footer>
+      
+  <script src="./darkmode/app.js"></script>
+  <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
 </html>
