--- a/portifolio.html
+++ b/portifolio.html
@@ -14,6 +14,7 @@
         <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="style/estilos-comuns/reset.css">
         <link rel="stylesheet" href="style/estilos-comuns/style.css">
+        <link rel="stylesheet" href="./darkmode/main.css">
         <link rel="stylesheet" href="style/paginas/portifolio/portifolio.css">
         <title>Portifólio</title>
     </head>
@@ -28,6 +29,7 @@
             <li><a class="nav-home" href="#">Serviços</a></li>
             <li><a class="nav-home" href="#">Contato</a></li>
             <li><a class="nav-home__login" href="login.html">Login</a></li>
+            <li><button class="btn">Tema</button></li>
           </ul>
         </nav>
       </nav>
@@ -77,6 +79,8 @@
 
         <ul><li><a href="">CNPJ ou Razão Social</a></li></ul>
       </footer>
+      <script src="./darkmode/app.js"></script>
+    <noscript>You need to enable JavaScript to view the full site.</noscript>
     
 </body>
 </html>
