--- a/arranjos-personalizados.html
+++ b/arranjos-personalizados.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
     <link rel="stylesheet" href="style/paginas/decorações-e-eventos/decoracoes-e-eventos.css">
+    <link rel="stylesheet" href="./darkmode/main.css">
 
     <script
     src="https://kit.fontawesome.com/0f251f1c56.js"
@@ -26,6 +27,7 @@
             <li><a class="nav-home" href="#">Serviços</a></li>
             <li><a class="nav-home" href="#">Contato</a></li>
             <li><a class="nav-home__login" href="login.html">Login</a></li>
+            <li><button class="btn">Dark</button></li>
         </nav>
 
     <section class="imagem-titulo">
@@ -202,5 +204,8 @@
 
         <ul><li><a href="">CNPJ ou Razão Social</a></li></ul>
       </footer>
+      
+  <script src="./darkmode/app.js"></script>
+  <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
 </html>
